--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 :root{
---background-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1452978199649714289/Muffet.gif?ex=694bc6e5&is=694a7565&hm=28d4ca80a155b0c9f97a525b70ddd1406f4a56d492e7ef4dd8915fa3b08e5708&");
---avatar-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/Uno.png?ex=694be2bd&is=694a913d&hm=2d4373533966d44de6acad6f1df329d26f45c25d5c8b7b5676dcb0ee8861a844&");
---name:"Foruxy";--tagline:"Vtuber Talent Manager • Discord Server Manager";--accent:#38bdf8;
+  --background-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1452978199649714289/Muffet.gif");
+  --avatar-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/Uno.png");
+  --avatar-about-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/AboutAvatar.png"); /* avatar khusus About */
+  --name:"Foruxy";
+  --tagline:"Vtuber Talent Manager • Discord Server Manager";
+  --accent:#38bdf8;
 }
 *,body,.container,.link,.paper-box{box-sizing:border-box;font-family:"Comic Sans MS","Comic Sans",cursive;cursor:none!important;margin:0;padding:0;}
 body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),var(--background-image);background-size:cover;background-position:center;display:flex;justify-content:center;align-items:center;color:#e5e7eb;overflow:hidden;}
@@ -21,6 +24,7 @@ body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)
 .container.show{transform:translateY(0);opacity:1;}
 .avatar-wrapper{width:100px;height:100px;margin:0 auto 18px;border-radius:50%;padding:4px;background:conic-gradient(var(--accent),#0ea5e9,var(--accent));}
 .avatar{width:100%;height:100%;border-radius:50%;border:3px solid #fff;background-image:var(--avatar-image);background-size:cover;background-position:center;}
+.avatar-about{width:100%;height:100%;border-radius:50%;border:3px solid #fff;background-image: var(--avatar-about-image);background-size: cover;background-position: center;}
 h1{margin:0;font-size:1.7rem;font-weight:600;}p{margin:8px 0 26px;font-size:.95rem;color:#94a3b8;}.bio-description{font-size:.9rem;line-height:1.4;color:#e5e7eb;margin-top:12px;text-align:left;}
 .link{display:block;padding:18px;margin-bottom:16px;border-radius:18px;background:rgba(15,23,42,.95);color:#e5e7eb;text-decoration:none;border:1px solid rgba(255,255,255,.08);transform:translateY(0) scale(1);transition:transform .3s,box-shadow .3s;position:relative;cursor:pointer;}
 .link.hover{transform:translateY(-3px) scale(1.02);box-shadow:0 15px 40px rgba(56,189,248,.35);}
@@ -59,7 +63,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 <!-- OVERLAY BOXES -->
 <div class="paper-box" id="aboutBox"><div class="close-trigger"></div>
 <div class="box-content">
-<div class="avatar-wrapper"><div class="avatar"></div></div>
+<div class="avatar-wrapper"><div class="avatar avatar-about"></div></div>
 <h1 id="about-name"></h1><p id="about-tagline"></p>
 <div class="bio-description">Hawrru~! I'm Foruxy, the Silver Catfox~<br>
 I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!<br>
