--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 :root{
   --background-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1452978199649714289/Muffet.gif");
   --avatar-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/Uno.png");
-  --avatar-about-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/AboutAvatar.png"); /* avatar khusus About */
+  --avatar-about-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1429854241740030042/anacat.png"); /* avatar khusus About */
   --name:"Foruxy";
   --tagline:"Vtuber Talent Manager • Discord Server Manager";
   --accent:#38bdf8;
@@ -24,7 +24,6 @@ body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)
 .container.show{transform:translateY(0);opacity:1;}
 .avatar-wrapper{width:100px;height:100px;margin:0 auto 18px;border-radius:50%;padding:4px;background:conic-gradient(var(--accent),#0ea5e9,var(--accent));}
 .avatar{width:100%;height:100%;border-radius:50%;border:3px solid #fff;background-image:var(--avatar-image);background-size:cover;background-position:center;}
-.avatar-wrapper2{width:100px;height:100px;margin:0 auto 18px;border-radius:50%;padding:4px;background:conic-gradient(var(--accent),#0ea5e9,var(--accent));}
 .avatar-about{width:100%;height:100%;border-radius:50%;border:3px solid #fff;background-image: var(--avatar-about-image);background-size: cover;background-position: center;}
 h1{margin:0;font-size:1.7rem;font-weight:600;}p{margin:8px 0 26px;font-size:.95rem;color:#94a3b8;}.bio-description{font-size:.9rem;line-height:1.4;color:#e5e7eb;margin-top:12px;text-align:left;}
 .link{display:block;padding:18px;margin-bottom:16px;border-radius:18px;background:rgba(15,23,42,.95);color:#e5e7eb;text-decoration:none;border:1px solid rgba(255,255,255,.08);transform:translateY(0) scale(1);transition:transform .3s,box-shadow .3s;position:relative;cursor:pointer;}
@@ -64,7 +63,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 <!-- OVERLAY BOXES -->
 <div class="paper-box" id="aboutBox"><div class="close-trigger"></div>
 <div class="box-content">
-<div class="avatar-wrapper2"><div class="avatar avatar-about"></div></div>
+<div class="avatar-wrapper"><div class="avatar-about"></div></div>
 <h1 id="about-name"></h1><p id="about-tagline"></p>
 <div class="bio-description">Hawrru~! I'm Foruxy, the Silver Catfox~<br>
 I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!<br>
