--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 <div class="paper-box" id="aboutBox"><div class="close-trigger"></div>
 <div class="box-content">
 <div class="avatar-wrapper about-avatar-wrapper"><div class="avatar" id="aboutAvatar"></div></div>
-<h1 id="about-name"></h1><p id="about-tagline"></p>
+<h1 id="about-name"></h1>
 <div class="bio-description">Hawrru~! I'm Foruxy, the Silver Catfox~<br>
 I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!<br>
 I also help as a Vtuber Advisor, Counselor, and Helper.<br>
@@ -87,7 +87,7 @@ const CONFIG={
   name:"Foruxy",
   tagline:"Vtuber Talent Manager • Discord Server Manager",
   avatar:"https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/Uno.png?ex=694be2bd&is=694a913d&hm=2d4373533966d44de6acad6f1df329d26f45c25d5c8b7b5676dcb0ee8861a844&",
-  aboutAvatar:"https://cdn.discordapp.com/attachments/799015739973566545/1452978199649714289/Muffet.gif?ex=694bc6e5&is=694a7565&hm=28d4ca80a155b0c9f97a525b70ddd1406f4a56d492e7ef4dd8915fa3b08e5708&",
+  aboutAvatar:"https://cdn.discordapp.com/attachments/799015739973566545/1429854241740030042/anacat.png?ex=694c0708&is=694ab588&hm=8fdba66150dd8174d321c7c9fffbdb4a3e32bdad5883e10a5d7197268dde735f&",
   links:[{label:"✉ About Me",url:"#about"},{label:"💼 My Work",url:"#work"},{label:"🌐 Social",url:"#social"}],
   myWork:[
     {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025"},
