--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .paper-box .box-content{background:rgba(2,6,23,.95);color:#e5e7eb;border-radius:22px;padding:26px;max-width:600px;width:100%;box-shadow:0 30px 70px rgba(0,0,0,.8);backdrop-filter:blur(16px);transform:scale(.8);transition:transform .3s;}
 .paper-box.active .box-content{transform:scale(1);}
 .paper-box .close-trigger{position:absolute;top:0;left:0;width:100%;height:100%;cursor:pointer;}
-#workContent{max-height:600px;overflow-y:auto;padding-right:16px;}
-#workContent::-webkit-scrollbar{width:4px;}
+#workContent{max-height:400px;overflow-y:auto;padding-right:16px;margin: 80px auto;}
+#workContent::-webkit-scrollbar{width:1px;}
 #workContent::-webkit-scrollbar-thumb{background-color:var(--accent);border-radius:1px;}
 #workContent::-webkit-scrollbar-track{background:rgba(255,255,255,0.05);border-radius:1px;}
 .mywork-item{display:flex;gap:16px;background:rgba(56,189,248,.1);border:2px solid var(--accent);border-radius:16px;padding:12px;align-items:center;margin-bottom:12px;}
